[package]
name = "gusto"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["honhimw <honhimw@outlook.com>"]
description = "lightweight ratatui framework"
keywords = ["ratatui", "starter"]
license = "MIT"
repository = "https://github.com/honhimW/gusto"
readme = "README.md"

[dependencies]
anyhow = "1"
ratatui = { version = "0.30.0", features = ["crossterm"]}
crossbeam-channel = "0.5"
log = "0.4"
bitflags = "2"

[dev-dependencies]
edit = "0.1.5"
tokio = { version = "1", features = ["full"] }